test_suite5/ALAN/test_suite/alan-2022-examples/failing/002050_mutation.alan
source cC begin get Px <= [1] end
